[package]
name = "crunchy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
anyhow = "1.0.68"
crunchyroll-rs = "0.8"
tokio = { version = "1.23", features = ["full"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = "s"